got modules to load

--- a/city3d.html
+++ b/city3d.html
@@ -10,7 +10,6 @@
         </style>
     </head>
     <body>
-        <script src="./three/three.min.js"></script>
-        <script src="./city3d.js"></script>
+        <script src="./city3d.js" type="module"></script>
     </body>
 </html>
