added a structure.js superclass, and a separate /structures directory

--- a/sandbox.html
+++ b/sandbox.html
@@ -10,6 +10,6 @@
         </style>
     </head>
     <body>
-        <script src="./city3d.js" type="module"></script>
+        <script src="./sandbox.js" type="module"></script>
     </body>
 </html>
