--- a/sandbox.html
+++ b/sandbox.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
         <style>
-            body { margin: 0; padding: 0; }
+            body { margin: 0; padding: 0; background-color: #cce0ff; }
             canvas { width: 100%; height: 100%; }
         </style>
     </head>
