--- a/sandbox.html
+++ b/sandbox.html
@@ -7,6 +7,11 @@
         <style>
             body { margin: 0; padding: 0; background-color: #cce0ff; }
             canvas { width: 100%; height: 100%; }
+            .tooltip {
+              color: #FFF;
+              padding: 2px;
+              background: rgba(0, 0, 0, .6);
+            }
         </style>
     </head>
     <body>
