Replaced CSS2DRenderer based tooltips with plain vanilla ones, which work better. Moved raycasting code into handleCurrentTarget() for easier profiling. Changed highlighting so the highlighted object temporarily gets its own material (so changing the color only affects that one object).

--- a/sandbox.html
+++ b/sandbox.html
@@ -11,6 +11,8 @@
               color: #FFF;
               padding: 2px;
               background: rgba(0, 0, 0, .6);
+              position: absolute;
+              opacity: 0;
             }
         </style>
     </head>
