move images into assets/ directory & display output in <div id="city3d">

--- a/examples/city3d.html
+++ b/examples/city3d.html
@@ -17,6 +17,7 @@
         </style>
     </head>
     <body>
+        <div id="city3d"></div>
         <script src="../build/city3d.js" type="module"></script>
     </body>
 </html>
